# COMP371-A2

./: .gitignore  CMakeLists.txt  README.md  Report.txt  flake.nix
include/glad/: glad.h
includeNixStore/: 8jfbvd9bhihppblrpk23n6kda9ypsbsb-glm-1.0.1  ll2b6cslly4v30im7qk34f9y21ziiz1i-cmake-3.29.6  yjxmnma2sr4dm5ama80dcdsnggd99966-glfw-3.4
src/: glad.c  main.cpp
